# ironbot

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: format.yml  tests.yml  typing.yml
ironbot/: __init__.py  __main__.py  db.py  models.py  parsers.py  scrappers.py  settings.py
migrations/: env.py
migrations/versions/: 202306060942-b4b43ef8b170-init.py  202306091840-7006cdbde63b-adds_indexes.py
tests/: test_model.py  test_parsers.py
