[tool.poetry]
name = "ironbot"
version = "0.0.1"
description = "CLI to get information about Ironman professional races"
authors = ["Eduardo Cuducos <4732915+cuducos@users.noreply.github.com>"]
license = "GPL-3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.2"
httpx = "^0.24.1"
pdftotext = "^2.2.2"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ipython = "^8.13.2"
mypy = "^1.3.0"
types-beautifulsoup4 = "^4.12.0.5"

[tool.poetry.scripts]
ironbot = "ironbot.__main__:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
